Fix the wrapping of the filter toolbar in the translation page.
This is done by making the following changes:
- Createing a new div for the toolbar.
- Creating and adding a new class to the new div to float the toolbar to the left.
- Moving the output of the pagination toolbar until after the filter toolbar so it stays close to the translation table.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -589,6 +589,13 @@ ul a.delete {
 }
 
 /*
+ * Filter menu
+ */
+.filter-toolbar {
+	float: left;
+}
+
+/*
  * Translation page filters
  */
 .filter-current {
